improves styling of edit this page link

--- a/src/components/sitelayout/FloatingEdit.astro
+++ b/src/components/sitelayout/FloatingEdit.astro
@@ -26,9 +26,18 @@ if (isHomepage) {
     margin-left: auto;
     margin-right: auto;
     text-align: right;
+    z-index: 9999;
   }
 
   .floating-edit a {
+    padding: 0.5em;
+    background-color: white;
+    text-decoration: none;
+    border: 1px solid black;
+    border-radius: .5em;
+  }
+  .floating-edit a:hover {
+    background-color: lightblue;
   }
 </style>
 {
