--- a/src/components/pagebuilder/HeroSection.astro
+++ b/src/components/pagebuilder/HeroSection.astro
@@ -3,6 +3,9 @@ const { props } = Astro;
 const imagePath = "../../assets/images" + props.image;
 import Image from "astro/components/Image.astro";
 import { getImage } from "astro:assets";
+import { settings } from "../helpers/settingsHelper";
+const pageWidth = settings.pageArea.pageWidth;
+const sidePadding = settings.pageArea.padding.horizontal;
 
 console.log(props);
 const images = import.meta.glob<{ default: ImageMetadata }>(
@@ -24,7 +27,15 @@ if (props.parallax) {
 }
 ---
 
-<style define:vars={{ heroWidth: props.width, heroHeight: props.height }}>
+<style
+  define:vars={{
+    heroWidth: props.width,
+    heroHeight: props.height,
+    pageWidth,
+    sidePadding,
+    panelWidth: props.panelWidth,
+  }}
+>
   .hero-section-wrapper {
     max-width: var(--heroWidth);
     height: var(--heroHeight);
@@ -39,15 +50,25 @@ if (props.parallax) {
     height: var(--heroHeight);
     position: relative;
     display: flex;
-    padding: 2rem;
+    justify-content: center;
+    align-items: center;
+    /* padding: 2rem; */
     background-size: cover;
+    background-position: center;
     /* background-attachment: fixed; */
   }
   .hero-section-content-panel {
     background-color: white;
-    position: relative;
+    /* position: relative; */
     padding: 1rem;
-    min-width: 200px;
+    max-width: var(--panelWidth);
+  }
+  .hero-section-content-wrapper {
+    width: 100%;
+    max-width: var(--pageWidth);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
   }
 </style>
 <div class="hero-section-wrapper">
@@ -55,8 +76,10 @@ if (props.parallax) {
     class="hero-section-container"
     style={{ backgroundImage: `url(${fancyImage.src})`, ...parallaxSelector }}
   >
-    <div class="hero-section-content-panel">
-      <slot />
+    <div class="hero-section-content-wrapper">
+      <div class="hero-section-content-panel">
+        <slot />
+      </div>
     </div>
   </div>
 </div>
