--- a/src/components/pagebuilder/MarkdocImageReplace.astro
+++ b/src/components/pagebuilder/MarkdocImageReplace.astro
@@ -14,6 +14,7 @@ if (!images[imagePath])
 ---
 
 <Image
+  {...props}
   src={images[imagePath]()}
   alt={props.alt}
   width={settings.pageArea.images.optimizationWidth}
