--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -105,7 +105,7 @@ justify-content: flex-end;  }
   // alert(buttons.length);
   const hideAllMenus = ()=>{
     document.querySelectorAll(".menu-submenu").forEach((submenu) => {
-        // console.log(submenu);
+        console.log(submenu);
         submenu.classList.toggle("submenu-hidden", true);
       });
   }
