--- a/src/components/sitelayout/FloatingEdit.astro
+++ b/src/components/sitelayout/FloatingEdit.astro
@@ -1,7 +1,9 @@
 ---
 const isDev = process.env.NODE_ENV === "development";
 const fullPath = Astro.url.pathname;
+console.log(Astro.params.slug);
 const isProject = fullPath.includes("/projects/");
+console.log(isProject);
 const isHomepage = typeof Astro.params.slug === "undefined";
 let editPath;
 if (isHomepage) {
