implements ability to load 3 fonts, and places their links in <head>

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -2,7 +2,7 @@
 import type { string } from "astro/zod";
 import menuItems from "../../helpers/menuItems";
 
-import settings from "../../helpers/settingsHelper";
+import {settings} from "../../helpers/settingsHelper";
 const menuItemCount=menuItems.length;
 ---
 
