--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,9 @@ const fontLinks = Object.values(settings.fonts)
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <ViewTransitions />
@@ -97,5 +100,18 @@ const fontLinks = Object.values(settings.fonts)
     <slot />
   </LayoutSwitcher>
 
+  <script>
+    import AOS from "aos";
+    import "aos/dist/aos.css"; // You can also use <link> for styles
+    // ..
 
+    document.addEventListener("astro:page-load", () => {
+      document.querySelectorAll("main > *").forEach((item) => {
+        item.setAttribute("data-aos", "fade-in");
+        AOS.init();
+      });
+    });
+
+    AOS.init();
+  </script>
 </html>
