--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,9 +19,6 @@ const fontLinks = Object.values(settings.fonts)
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <ViewTransitions />
@@ -92,8 +89,8 @@ const fontLinks = Object.values(settings.fonts)
       .md-default-image {
         max-width: var(--maxImageWidth);
       }
-    </style></head
-  >
+    </style>
+  </head>
 
   <LayoutSwitcher>
     <FloatingEdit />
@@ -108,7 +105,7 @@ const fontLinks = Object.values(settings.fonts)
     document.addEventListener("astro:page-load", () => {
       document.querySelectorAll("main > *").forEach((item) => {
         item.setAttribute("data-aos", "fade-in");
-        AOS.init();
+        AOS.init({ offset: 0, delay: 50 });
       });
     });
 
