improves custom HTML component by serializing/b64 encoding its contents

--- a/src/components/pagebuilder/CodeEmbed.astro
+++ b/src/components/pagebuilder/CodeEmbed.astro
@@ -1,5 +1,6 @@
 ---
-const {props}=Astro;
-const {content}=props;
+const { props } = Astro;
+const { content } = props;
 ---
-<div set:html={content}></div>
+
+<div set:html={atob(content)} />
