--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -1,21 +1,22 @@
 ---
-import Image from "astro/components/Image.astro";
 import { getImage } from "astro:assets";
 const { title, url, thumbnail, accent } = Astro.props;
 import { settings } from "../../helpers/settingsHelper";
 const tileSettings = settings.portfolioLayouts.coolTile;
+let fancyImage = { src: "" };
+if (thumbnail) {
+  const imageProps = await getImage({
+    src: thumbnail,
+  });
+  console.log(imageProps);
+  const srcRatio = imageProps.attributes.width / imageProps.attributes.height;
+  const neededWidth = srcRatio * tileSettings.minTileWidth * 2;
 
-const imageProps = await getImage({
-  src: thumbnail,
-});
-console.log(imageProps);
-const srcRatio = imageProps.attributes.width / imageProps.attributes.height;
-const neededWidth = srcRatio * tileSettings.minTileWidth * 2;
-
-const fancyImage = await getImage({
-  src: thumbnail,
-  width: neededWidth,
-});
+  fancyImage = await getImage({
+    src: thumbnail,
+    width: neededWidth,
+  });
+}
 ---
 
 <style define:vars={{ tileRatio: tileSettings.tileAspectRatio }}>
