tries improving build time by allowing caching of node modules

--- a/src/components/pagebuilder/CustomCSSWrapper.astro
+++ b/src/components/pagebuilder/CustomCSSWrapper.astro
@@ -2,4 +2,6 @@
 const { props } = Astro;
 ---
 
-<div style={atob(props.customCSS)}><slot /></div>
+<div style={atob(props.customCSS)}>
+  <slot />
+</div>
