--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -8,7 +8,7 @@ if (thumbnail) {
   const imageProps = await getImage({
     src: thumbnail,
   });
-  console.log(imageProps);
+  // console.log(imageProps);
   const srcRatio = imageProps.attributes.width / imageProps.attributes.height;
   const neededWidth = srcRatio * tileSettings.minTileWidth * 2;
 
