seemingly implements font props cascading correctly?

--- a/src/components/pagebuilder/HeroSection.astro
+++ b/src/components/pagebuilder/HeroSection.astro
@@ -79,6 +79,9 @@ if (props.parallax) {
     padding: 1rem;
     max-width: var(--panelWidth);
   }
+  /* .hero-section-content-panel * {
+    color: var(--textColor);
+  } */
   .hero-section-content-wrapper {
     width: 100%;
     max-width: var(--pageWidth);
