starts adding css rules for other type

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,6 +68,28 @@ console.log(fontRules);
         margin-bottom: var(--h2-marginBottom);
         color: var(--font-color-override, --h2-color);
       }
+      h3 {
+        font-family: var(--h3-fontFamily);
+        font-size: var(--h3-fontSize);
+        margin-top: var(--h3-marginTop);
+        margin-bottom: var(--h3-marginBottom);
+        color: var(--font-color-override, --h3-color);
+      }
+      h4 {
+        font-family: var(--h4-fontFamily);
+        font-size: var(--h4-fontSize);
+        margin-top: var(--h4-marginTop);
+        margin-bottom: var(--h4-marginBottom);
+        color: var(--font-color-override, --h4-color);
+      }
+      h5 {
+        font-family: var(--h5-fontFamily);
+        font-size: var(--h5-fontSize);
+        margin-top: var(--h5-marginTop);
+        margin-bottom: var(--h5-marginBottom);
+        color: var(--font-color-override, --h5-color);
+      }
+
       p {
         font-family: var(--p-fontFamily);
         font-size: var(--p-fontSize);
