--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import { settings } from "../components/helpers/settingsHelper";
 
 const fontLinks = Object.values(settings.fonts)
   .map((fontObj) => {
-    return fontObj.htmlLink;
+    return atob(fontObj.htmlLink);
   })
   .join("");
 
