sets up baseline font scale

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -122,6 +122,7 @@ console.log(fontRules);
         padding: 0;
         line-height: 1.25;
         font-size: 1.25rem;
+        font-family: var(--p-fontFamily);
       }
 
       img {
