--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -2,8 +2,8 @@
 import type { string } from "astro/zod";
 import menuItems from "../../helpers/menuItems";
 
-import {settings} from "../../helpers/settingsHelper";
-const menuItemCount=menuItems.length;
+import { settings } from "../../helpers/settingsHelper";
+const menuItemCount = menuItems.length;
 ---
 
 <style>
@@ -13,11 +13,12 @@ const menuItemCount=menuItems.length;
     position: fixed;
     left: 0px;
     right: 0px;
-    top:0px;
+    top: 0px;
     background-color: aquamarine;
     display: flex;
-    padding:0;
-justify-content: flex-end;  }
+    padding: 0;
+    justify-content: flex-end;
+  }
   .menu-main-group {
     position: fixed;
     top: 45px;
@@ -38,112 +39,125 @@ justify-content: flex-end;  }
   .menu-dropdown-button {
     display: none;
   }
-  .menu-toggle-button{
-
+  .menu-toggle-button {
   }
-  .menu-mobile-hidden{
+  .menu-mobile-hidden {
     display: none;
   }
 
-  @media screen and (min-width: 600px) {
-    .menu-mobile-hidden{
+  @media screen and (min-width: 768px) {
+    .menu-mobile-hidden {
       display: flex;
     }
-    #menu-toggle{
+    #menu-toggle {
       display: none;
     }
-    .menu-main button 
-    {
+    .menu-main button {
       display: inline;
     }
     .menu-main-group {
       display: flex;
+      align-items: stretch;
       flex-direction: row;
       gap: 1rem;
       position: static;
     }
-    .menu-main{
+    .menu-main {
       justify-content: center;
       position: relative;
       z-index: 100;
     }
     .menu-submenu {
-
       position: absolute;
- 
+
       top: 45px;
       display: inline-flex;
       flex-direction: column;
       gap: 1rem;
       background-color: lightblue;
-      padding: .5rem;
-      transition: all .2s;
+      padding: 0.5rem;
+      transition: all 0.2s;
       z-index: -10;
     }
-    .menu-submenu a{
-      width:max-content;
+    .menu-submenu a {
+      width: max-content;
     }
-    .dropdown-group{
+    .dropdown-group {
       position: relative;
+      display: flex;
+      /* border: 1px solid red; */
     }
-    .dropdown-group-right .menu-submenu{
-      right:0;
-
+    .dropdown-button-wrapper {
+      border: 1px solid red;
+      display: flex;
+    }
+    .dropdown-button-wrapper a {
+      align-self: center;
+      padding: 3px;
+    }
+    .menu-dropdown-button {
+      min-width: 30px;
+    }
+    .dropdown-group-right .menu-submenu {
+      right: 0;
     }
     .submenu-hidden {
       /* transform:translateY(-50px); */
       height: 0px;
-      opacity:0;
+      opacity: 0;
       pointer-events: none;
-      transition:all .2s;
+      transition: all 0.2s;
     }
   }
 </style>
 
 <script>
- 
   // alert(buttons.length);
-  const hideAllMenus = ()=>{
+  const hideAllMenus = () => {
     document.querySelectorAll(".menu-submenu").forEach((submenu) => {
-        submenu.classList.toggle("submenu-hidden", true);
+      submenu.classList.toggle("submenu-hidden", true);
+    });
+  };
+  document.addEventListener("astro:page-load", () => {
+    const buttons = document.querySelectorAll(".menu-dropdown-button");
+    buttons.forEach((item) => {
+      item.addEventListener("click", () => {
+        const menuID = item.getAttribute("data-menu-id") || "";
+        const isInitiallyHidden = document
+          .getElementById(menuID)
+          ?.classList.contains("submenu-hidden");
+        hideAllMenus();
+        document
+          .getElementById(menuID)
+          ?.classList.toggle("submenu-hidden", !isInitiallyHidden);
       });
-  }
-  document.addEventListener("astro:page-load", () => {   
-  const buttons = document.querySelectorAll(".menu-dropdown-button");
-  buttons.forEach((item) => {
-    item.addEventListener("click", () => {
-      const menuID = item.getAttribute("data-menu-id") || "";
-      const isInitiallyHidden = document
-        .getElementById(menuID)
-        ?.classList.contains("submenu-hidden");
-      hideAllMenus();
+    });
+
+    document.querySelector("#menu-toggle")?.addEventListener("click", () => {
       document
-        .getElementById(menuID)
-        ?.classList.toggle("submenu-hidden", !isInitiallyHidden);
+        .querySelector(".menu-main-group")
+        ?.classList.toggle("menu-mobile-hidden");
     });
   });
-
-
-document.querySelector('#menu-toggle')?.addEventListener('click',()=>{
-  document.querySelector('.menu-main-group')?.classList.toggle('menu-mobile-hidden')
-})
-})
-
 </script>
 
 <nav class="menu-main">
   <button id="menu-toggle">Menu</button>
 
-<div class="menu-main-group menu-mobile-hidden">
+  <div class="menu-main-group menu-mobile-hidden">
     {
-      
-      menuItems.map((item,index) => {
-        const isRightSide= ((index*2)> menuItemCount);
+      menuItems.map((item, index) => {
+        const isRightSide = index * 2 > menuItemCount;
         if (item.subItems.length > 0) {
           return (
             <>
-              <div class:list={["dropdown-group",isRightSide&&'dropdown-group-right']}>
-                <div>
+              <div
+                class:list={[
+                  "dropdown-group",
+                  isRightSide && "dropdown-group-right",
+                ]}
+              >
+                <div class="dropdown-button-wrapper">
                   <a href={item.url}>{item.title}</a>
                   <button
                     class="menu-dropdown-button"
@@ -155,9 +169,11 @@ document.querySelector('#menu-toggle')?.addEventListener('click',()=>{
                 </div>
 
                 <div class="menu-submenu submenu-hidden" id={item.groupID}>
-                  {item.subItems.map((subItem:{url:string,title:string}) => {
-                    return <a href={subItem.url}>{subItem.title}</a>;
-                  })}
+                  {item.subItems.map(
+                    (subItem: { url: string; title: string }) => {
+                      return <a href={subItem.url}>{subItem.title}</a>;
+                    }
+                  )}
                 </div>
               </div>
             </>
