implements click outside menu to close it

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -118,8 +118,18 @@ const menuItemCount = menuItems.length;
       submenu.classList.toggle("submenu-hidden", true);
     });
   };
+  // hide the menu upon clicking outside of it
+  window.addEventListener("click", (event) => {
+    //@ts-ignore not sure why i need this but i do
+    if (!document.querySelector(".menu-main")?.contains(event.target)) {
+      hideAllMenus();
+    }
+  });
+
   document.addEventListener("astro:page-load", () => {
+    // add event listener to the dropdown buttons to open/close the menus
     const buttons = document.querySelectorAll(".menu-dropdown-button");
+
     buttons.forEach((item) => {
       item.addEventListener("click", () => {
         const menuID = item.getAttribute("data-menu-id") || "";
@@ -130,6 +140,20 @@ const menuItemCount = menuItems.length;
         document
           .getElementById(menuID)
           ?.classList.toggle("submenu-hidden", !isInitiallyHidden);
+      });
+    });
+    // add event listener to open menus on hover
+    const menuHoverTriggers = document.querySelectorAll(
+      ".dropdown-button-wrapper > a"
+    );
+    menuHoverTriggers.forEach((item) => {
+      item.addEventListener("mouseenter", () => {
+        const menuID = item.getAttribute("data-menu-id") || "";
+
+        hideAllMenus();
+        document
+          .getElementById(menuID)
+          ?.classList.toggle("submenu-hidden", false);
       });
     });
 
@@ -158,7 +182,9 @@ const menuItemCount = menuItems.length;
                 ]}
               >
                 <div class="dropdown-button-wrapper">
-                  <a href={item.url}>{item.title}</a>
+                  <a href={item.url} data-menu-id={item.groupID}>
+                    {item.title}
+                  </a>
                   <button
                     class="menu-dropdown-button"
                     data-menu-id={item.groupID}
