--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -18,6 +18,7 @@ const menuItemCount = menuItems.length;
     display: flex;
     padding: 0;
     justify-content: flex-end;
+    z-index: 10000;
   }
   .menu-main-group {
     position: fixed;
@@ -27,7 +28,6 @@ const menuItemCount = menuItems.length;
     display: flex;
     flex-direction: column;
     background-color: lightblue;
-    z-index: 400;
   }
   .menu-submenu {
     display: flex;
@@ -35,6 +35,11 @@ const menuItemCount = menuItems.length;
     padding-left: 1rem;
     font-size: 0.75rem;
     gap: 0.25rem;
+    overflow: hidden;
+    z-index: -100;
+  }
+  .menu-submenu a {
+    
   }
   .menu-dropdown-button {
     display: none;
@@ -42,12 +47,19 @@ const menuItemCount = menuItems.length;
   .menu-toggle-button {
   }
   .menu-mobile-hidden {
-    display: none;
+    transform: translateY(-50px);
+    /* height: 0px; */
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
   }
 
   @media screen and (min-width: 768px) {
     .menu-mobile-hidden {
       display: flex;
+      opacity: 1;
+      pointer-events: all;
+      transform: none;
     }
     #menu-toggle {
       display: none;
@@ -76,8 +88,7 @@ const menuItemCount = menuItems.length;
       gap: 1rem;
       background-color: lightblue;
       padding: 0.5rem;
-      transition: all 0.2s;
-      z-index: -10;
+      transition: all 0.3s;
     }
     .menu-submenu a {
       width: max-content;
@@ -88,7 +99,7 @@ const menuItemCount = menuItems.length;
       /* border: 1px solid red; */
     }
     .dropdown-button-wrapper {
-      border: 1px solid red;
+      /* border: 1px solid red; */
       display: flex;
     }
     .dropdown-button-wrapper a {
@@ -102,11 +113,11 @@ const menuItemCount = menuItems.length;
       right: 0;
     }
     .submenu-hidden {
-      /* transform:translateY(-50px); */
+      transform: translateY(-50px);
       height: 0px;
       opacity: 0;
       pointer-events: none;
-      transition: all 0.2s;
+      transition: all 0.3s;
     }
   }
 </style>
@@ -118,11 +129,17 @@ const menuItemCount = menuItems.length;
       submenu.classList.toggle("submenu-hidden", true);
     });
   };
+  const hideMobileMenu = () => {
+    document
+      .querySelector(".menu-main-group")
+      ?.classList.toggle("menu-mobile-hidden", true);
+  };
   // hide the menu upon clicking outside of it
   window.addEventListener("click", (event) => {
     //@ts-ignore not sure why i need this but i do
     if (!document.querySelector(".menu-main")?.contains(event.target)) {
       hideAllMenus();
+      hideMobileMenu();
     }
   });
 
