implements media query for touch devices

--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -53,6 +53,12 @@ if (thumbnail) {
   .tile-hover-panel-title {
     color: white;
   }
+  @media (hover: none) {
+    .tile-hover-panel {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
 </style>
 
 <article
