--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -29,6 +29,8 @@ const menuItemCount = menuItems.length;
     background-color: lightblue;
     overflow: hidden;
     z-index: -10;
+    transform: none;
+    transition: all 0.3s;
   }
   .menu-submenu {
     display: flex;
