tries any-hover query instead of no hover query

--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -53,7 +53,7 @@ if (thumbnail) {
   .tile-hover-panel-title {
     color: white;
   }
-  @media (hover: none) {
+  @media (any-hover: none) {
     .tile-hover-panel {
       transform: scale(1);
       opacity: 1;
