--- a/src/components/sitelayout/Sidebar/SidebarPage.astro
+++ b/src/components/sitelayout/Sidebar/SidebarPage.astro
@@ -3,25 +3,27 @@ import SidebarNav from "./SidebarNav.astro";
 ---
 
 <style>
-  body {
-    padding: 0;
-  }
-  header {
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 300px;
-    background-color: lightblue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
   main {
-    position: relative;
-    left: 300px;
-    width: calc(100% - 300px);
+    padding-top: 45px;
+  }
+
+  @media screen and (min-width: 768px) {
+    main {
+      position: relative;
+      left: 300px;
+      width: calc(100% - 300px);
+      padding-top: 0;
+    }
+    header {
+      position: fixed;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      width: 300px;
+      background-color: lightblue;
+      display: flex;
+      overflow-y: scroll;
+    }
   }
 </style>
 <body>
