--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -9,11 +9,7 @@ const menuItemCount = menuItems.length;
 <style>
   /*  */
   .menu-main {
-    height: 45px;
-    position: fixed;
-    left: 0px;
-    right: 0px;
-    top: 0px;
+    position: absolute;
     /* background-color: aquamarine; */
     display: flex;
     padding: 0;
